0.5.0
Data-driven recipes
Resonance ring fix
Some recipe changes